Fixed page heigh calculations
- Taken the height of the navbar into account when centering elements vertically

- Fixed bug with the alert dismisss button not showing the alert again if it had been dismissed previously

--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -1,6 +1,8 @@
 .vertical-center {
-    min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
-    min-height: 100vh; /* These two lines are counted as one :-)       */
+    /* Fallback for browsers do NOT support vh unit */
+    /* These two lines are counted as one :-)       */
+    min-height: calc(100% - 56px);
+    min-height: calc(100vh - 56px);
 
     display: flex;
     align-items: center;
